//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  numSeq Int [increment, not null]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  lastName String
  firstName String
  title String
  Roles Role[] [not null]
  nickName String
  Gender Gender
  pwdHash String
  salt String
  social Json
  language String [default: 'en']
  dob DateTime
  address Json
  isValidated DateTime
  isSuspended DateTime
  isDeleted DateTime
  isAdmin Boolean [default: false]
  manager User
  managerId String
  Team User [not null]
  Profile Profile [not null]
  Group Group [not null]
  Post Post [not null]
  Comment Comment [not null]
  Todo Todo [not null]
  UserTodoLink UserTodoLink [not null]
  ChangesLog ChangesTracking [not null]
  Token Token [not null]
}

Table Token {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  type TokenType [not null]
  emailToken String [unique]
  valid Boolean [not null, default: true]
  expiration DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table Profile {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderProfile Int [not null]
  User User [not null]
  bio String [not null]
  isDeleted DateTime
}

Table Group {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderGroup Int [not null]
  name String [not null]
  User User [not null]
  Todo Todo [not null]
  isDeleted DateTime
}

Table Todo {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderTodo Int [not null]
  title String [not null]
  content String
  state TodoState [not null, default: 'CREATION']
  published Boolean [not null, default: false]
  public Boolean [not null, default: false]
  mainTodo Todo
  mainTodoId String
  SubTodo Todo [not null]
  User User [not null]
  Group Group [not null]
  UserTodoLink UserTodoLink [not null]
  isDeleted DateTime
}

Table UserTodoLink {
  userId String [not null]
  user User [not null]
  todoId String [not null]
  todo Todo [not null]
  isAuthor Boolean [not null, default: true]
  isAssigned Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, todoId) [pk]
  }
}

Table File {
  id String [pk]
  numSeq Int [increment, not null]
  name String [not null]
  storageName String [unique, not null]
  type String
  data String
  owner String
  size Int
  isDeleted DateTime
  isArchived DateTime
}

Table ChangesTracking {
  id Int [pk, increment]
  doneAt DateTime [default: `now()`, not null]
  modifiedBy User [not null]
  authorId String [not null]
  modelName String [not null]
  recordId String [not null]
  operation String [not null]
  newData Json [not null]
  oldData Json [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderPost Int
  published Boolean [not null, default: false]
  title String [not null]
  content String
  author User [not null]
  authorId String [not null]
  Category Category [not null]
  Comment Comment [not null]
  isDeleted DateTime
}

Table Category {
  id String [pk]
  orderCategory Int [not null]
  name String [not null]
  Post Post [not null]
  isDeleted DateTime
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isDeleted DateTime
  orderComment Int [not null]
  published Boolean [not null, default: false]
  content String
  post Post [not null]
  postId String [not null]
  author User [not null]
  authorId String [not null]
}

Table ConfigParam {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  value String [not null]
  utility String [not null]
}

Table Emaildomain {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  domain String [unique, not null]
  allowed Boolean [not null]
}

Table ProfileToUser {
  profileId String [ref: > Profile.id]
  userId String [ref: > User.id]
}

Table GroupToUser {
  groupId String [ref: > Group.id]
  userId String [ref: > User.id]
}

Table TodoToUser {
  todoId String [ref: > Todo.id]
  userId String [ref: > User.id]
}

Table GroupToTodo {
  todoId String [ref: > Todo.id]
  groupId String [ref: > Group.id]
}

Table CategoryToPost {
  categoryId String [ref: > Category.id]
  postId String [ref: > Post.id]
}

Enum TokenType {
  EMAIL
  API
  FORGOT
}

Enum TodoState {
  CREATION
  STANDBY
  RUNNING
  DONE
}

Enum Gender {
  MALE
  FEMELE
  UNKNOWN
}

Enum Role {
  GUEST
  USER
  ADMIN
  SUPERADMIN
}

Ref: User.managerId - User.id

Ref: Token.userId > User.id

Ref: Todo.mainTodoId - Todo.id

Ref: UserTodoLink.userId > User.id

Ref: UserTodoLink.todoId > Todo.id

Ref: ChangesTracking.authorId > User.id

Ref: Post.authorId > User.id

Ref: Comment.postId > Post.id

Ref: Comment.authorId > User.id